# mtg-watchdog

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mtg_watchdog/: cli.py  db.py  main.py  refresh.py  scryfall.py  sealed_sync.py  seed.py
src/mtg_watchdog/static/: app.css
src/mtg_watchdog/templates/: alerts.html  base.html  card.html  index.html  sealed.html  search.html
